--- a/docs/style.css
+++ b/docs/style.css
@@ -18,7 +18,7 @@ body{
                          "footer";
     gap: 80px;
     grid-template-columns: 100%;
-    grid-template-rows: 170px 300px 330px 530px 730px 330px 680px 300px;
+    grid-template-rows: 170px 300px 330px 530px 1110px 330px 680px 300px;
 }
 
 .slides,
@@ -113,7 +113,7 @@ nav{
     opacity: .7;
     width: 65%;
     padding-top: 29px;
-    font-size: 20px;
+    font-size: 1.2em;
     padding-left: 10px;
     background-color: #4B9E83;
     border-left: 7px solid #6C847C;
@@ -209,7 +209,7 @@ nav{
                          "content";
     gap: 5px;
     grid-template-columns: 100%;
-    grid-template-rows: 120px 605px;
+    grid-template-rows: 120px 985px;
 }
 
 #title3{
@@ -220,6 +220,14 @@ nav{
     grid-area: content;
     background-color: #6C847C;
     display: grid;
+    grid-template-areas: "life_img lifestyle_title"
+                         "lifestyle_content"
+                         "transport_title transport_img"
+                         "transport_content"
+                         "community_img community_title"
+                         "community_content";
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 120px 200px 120px 200px 120px 200px;
 }
 
 .personal{
