--- a/docs/style.css
+++ b/docs/style.css
@@ -121,8 +121,8 @@ nav{
 #title5{
     opacity: .7;
     width: 65%;
-    padding-top: 29px;
-    font-size: 1.2em;
+    padding-top: 13px;
+    font-size: 30px;
     padding-left: 10px;
     background-color: #4B9E83;
     border-left: 7px solid #6C847C;
@@ -134,9 +134,14 @@ nav{
 #center,
 #right{
     background-color: #4B9E83;
-    padding-top: 70px;
+    padding: 20px 10px 20px 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
     box-shadow: 10px 10px 5px #6C847C;
     height: 150px;
+    width: 100%;
     color: #413F3D;
     text-align: center;
 }
@@ -245,7 +250,8 @@ nav{
     color: white;
     background-color: #6C847C;
     opacity: .8;
-    padding-top: 2em;
+    font-size: 25px;
+    padding-top: 13px;
     padding-left: 2em;
     border-bottom: .5em solid #4B9E83;
 }
@@ -334,22 +340,23 @@ nav{
     border: 5px solid #4B9E83;
     border-radius: 360px;
     z-index: 3;
-    width: 180px;
-    height: 180px;
-    margin-top: 5px;
-    margin-left: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 50px;
+    box-shadow: 10px 10px 5px #6C847C;
 }
 
 #user_comment{
     grid-area: user_comment;
-    grid-column: 1 / 3;
-    width: fit-content;
-    margin-right: auto;
-    margin-left: 15rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 85%;
+    font-size: 20px;
     text-align: right;
     padding-right: 10px;
     color: white;
-    padding-top: 4.5em;
 }
 
 .resources{
@@ -380,7 +387,7 @@ nav{
     background-color: #6C847C;
     text-align: center;
     color: white;
-    font-size: .7em;
+    font-size: 20px;
     padding-top: 25px;
     opacity: .7;
     margin-top: 30px;
@@ -396,10 +403,16 @@ nav{
 #description1,
 #description2,
 #description3{
+    display: flex;
+    padding-left: 10px;
+    padding-right: 10px;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    text-align: center;
+    padding-left: 20px;
     margin-top: 0;
     margin-bottom: 0;
-    text-align: center;
-    padding-top: 70px;
 }
 
 #link1{
