--- a/docs/style.css
+++ b/docs/style.css
@@ -52,9 +52,9 @@ header{
     margin-top: 0;
 }
 
-#Information:hover,
-#Tips:hover,
-#Resources:hover{
+#Information_nav:hover,
+#Tips_nav:hover,
+#Resources_nav:hover{
     background-color: antiquewhite;
     color: #413F3D;
 }
