--- a/docs/style.css
+++ b/docs/style.css
@@ -6,6 +6,8 @@ body{
     margin: 0 auto;
 }
 
+/* Formatting for the overall page */
+
 .container{
     display:grid;
     grid-template-areas: "header" 
@@ -31,6 +33,8 @@ body{
     margin-left: 70px;
     margin-right: 70px;
 }
+
+/* Formatting for the header and navigation sections */
 
 header{
     grid-area: header;
@@ -87,6 +91,8 @@ nav{
     text-align: center;
 }
 
+/* Formatting for the slides section */
+
 #slides-container{
     grid-area: slides;
     background-color: #413F3D;
@@ -100,6 +106,8 @@ nav{
     padding-top: 120px;
     visibility: hidden;
 }
+
+/* Formatting for the statistics section */
 
 .statistics{
     grid-area: stats;
@@ -158,6 +166,8 @@ nav{
     grid-area: right;
 }
 
+/* Formatting for the overview section */
+
 .largerimage{
     grid-area: overview;
     display: grid;
@@ -215,6 +225,8 @@ nav{
     color: white;
     padding-top: 20px;
 }
+
+/* Formatting for the Tips & Tricks section */
 
 .tips_tricks{
     grid-area: tips;
@@ -312,6 +324,8 @@ nav{
     grid-area: community_content;
 }
 
+/* Formatting for the user section */
+
 .personal{
     grid-area: user;
     display: grid;
@@ -358,6 +372,8 @@ nav{
     padding-right: 10px;
     color: white;
 }
+
+/* Formatting for resources section */
 
 .resources{
     grid-area: resources;
@@ -449,6 +465,8 @@ nav{
     background-color: #6C847C;
     color:#413F3D;
 }
+
+/* Formatting for footer section */
 
 footer{
     grid-area: footer;
