--- a/docs/style.css
+++ b/docs/style.css
@@ -59,7 +59,7 @@ header{
 #Information_nav:hover,
 #Tips_nav:hover,
 #Resources_nav:hover{
-    background-color: antiquewhite;
+    background-color: #6EEBC1;
     color: #413F3D;
 }
 
@@ -111,6 +111,7 @@ nav{
 .statistics{
     grid-area: stats;
     display: grid;
+    text-decoration: none;
     grid-template-areas: "title title title"
                          "left center right";
     gap: 5px 30px;
@@ -357,7 +358,7 @@ nav{
     justify-content: center;
     align-items: center;
     margin-left: 50px;
-    box-shadow: 10px 10px 5px #6C847C;
+    box-shadow: 5px 5px 5px #6C847C;
 }
 
 #user_comment{
