--- a/docs/style.css
+++ b/docs/style.css
@@ -52,8 +52,9 @@ header{
     color: white;
     text-align: center;
     font-size: 17px;
-    padding-top: 25px;
-    margin-top: 0;
+    padding-top: 5px;
+    border: none;
+    margin: 0;
 }
 
 #Information_nav:hover,
@@ -388,7 +389,7 @@ nav{
     grid-template-rows: 120px 100px 1fr 1fr 1fr;
 }
 
-#title6{
+#resources_title{
     grid-area: title6;
     background-color: #4B9E83;
     grid-row: 1 / 3;
