--- a/docs/style.css
+++ b/docs/style.css
@@ -54,7 +54,7 @@ body{
 header{
     grid-area: header;
     display: grid;
-    grid-template-areas: "website_title website_title website_title"
+    grid-template-areas: "website_logo website_title website_title"
                          "info_nav tips_nav resources_nav";
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 100px 70px;
@@ -97,7 +97,17 @@ header{
     font-size: 30px;
     padding-top: 30px;
     margin-top: 0;
+    grid-column: 1/4;
     height: 100px;
+}
+
+#website_logo{
+    grid-area: website_logo;
+    z-index: 10;
+    margin-left: 10px;
+    margin-top: 5px;
+    height: 50%;
+    grid-row: 1/2;
 }
 
 /* Formatting for the slides section */
@@ -201,6 +211,7 @@ header{
 
 #dying_rose_img{
     grid-area: dying_rose_img;
+    margin-left: 20px;
 }
 
 #electric_car_img{
@@ -271,11 +282,12 @@ header{
 #community_img{
     height: 15em;
     z-index: 3;
-    box-shadow: 5px 10px 5px #6C847C;
+    box-shadow: 5px 5px 5px #6C847C;
 }
 
 #life_img{
     grid-area: lifestyle_img;
+    margin-left: 30px;
     grid-row: 1 / 3;
 }
 
@@ -293,6 +305,8 @@ header{
 
 #transport_img{
     grid-area: transport_img;
+    height: 17%;
+    margin-left: 300px;
 }
 
 #transport_content{
@@ -303,6 +317,7 @@ header{
 #community_img{
     grid-area: community_img;
     grid-row: 5 / 7;
+    margin-left: 30px;
 }
 
 #community_title{
@@ -367,8 +382,8 @@ header{
 .resources{
     grid-area: resources;
     display: grid;
-    grid-template-areas: "resources_title resources_subtitle"
-                         "t_image t_img"
+    grid-template-areas: "resources_title resources_title"
+                         "t_img t_img"
                          "link1 description1"
                          "link2 description2"
                          "link3 description3";
@@ -380,6 +395,7 @@ header{
     grid-area: resources_title;
     background-color: #4B9E83;
     grid-row: 1 / 3;
+    grid-column: 1/2;
     color: white;
     text-align: center;
     padding-top: 65px;
@@ -400,6 +416,10 @@ header{
 
 #t_img{
     grid-area: t_img;
+    grid-column: 2/3;
+    grid-row: 1/3;
+    margin-top: 20px;
+    width: 60%;
 }
 
 #link1,
