Added 10px margin-top to #user

--- a/docs/style.css
+++ b/docs/style.css
@@ -362,6 +362,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 10px;
     margin-left: 50px;
     box-shadow: 5px 5px 5px black;
 }
