Fixed padding for transport tips and fixed images file path

--- a/docs/style.css
+++ b/docs/style.css
@@ -313,6 +313,7 @@ header{
 #transport_content{
     grid-area: transport_content;
     text-align: left;
+    padding-left: 20px;
 }
 
 #community_img{
