Addition of mobile device media query

--- a/docs/style.css
+++ b/docs/style.css
@@ -509,3 +509,15 @@ footer{
     text-align: center;
     padding-top: 40px;
 }
+
+@media screen and (max-width: 480px) {
+    #slides_container,
+    .statistics,
+    .largerimage,
+    .tips_tricks,
+    .personal,
+    .email,
+    .resources{
+        margin: 0 auto;
+    }
+}
